build/log/idf_py_stderr_output_665478
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'dsp_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:93:44: error: expected ')' before numeric constant
   93 |     esp_err_t dsps_bit_rev_sc16_ansi(input, FFT_SIZE);
      |                                            ^
      |                                            )
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:85:21: warning: variable 'fft_buffer' set but not used [-Wunused-but-set-variable]
   85 |     static int16_t *fft_buffer;
      |                     ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
